# mlops-lab

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
models/onnx/: inspect_model.py  main.py  sensor_model.onnx  sensor_model.onnx.data
notebooks/house_price/: House_Price_Prediction.ipynb
scripts/: check_infra.py
