[project]
name = "mlops-lab"
version = "0.1.0"
description = "explore ml ops"
authors = [
    {name = "Daniel",email = "74949792+ductran999@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow (>=3.9.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
